<resources>
    <string name="app_name">NeuMADFa_Aarzoo Bansal</string>
    <string name="greeting">Hello World!!</string>
    <string name="email">bansal.aar@northeastern.edu</string>
    <string name="name">Aarzoo Bansal</string>
    <string name="about_me_btn">About Me!</string>
    <string name="calculator_btn">Calculator</string>
    <string name="contacts_btn">Contacts Collector</string>
    <string name="contacts_collector_title">Contacts Collector</string>
    <string name="user_name">Contact Name</string>
    <string name="user_contact">Contact Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="user_name_hint">Name (Required)</string>
    <string name="user_phone_hint">Phone No. (Required)</string>
    <string name="user_alternate_phone_hint">Alternate Phone No.</string>
    <string name="user_email_hint">Email</string>
    <string name="edit_contact">Edit</string>
    <string name="edit_contact_toolbar">Edit Contact</string>
    <string name="delete_contact">Delete</string>
    <string name="save_contact">Save</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="clear">=</string>
    <string name="taost_message"> Aarzoo Bansal\nbansal.aar@northeastern.edu</string>
    <string name="cal_display">CALC</string>
</resources>