<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addContacts">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addContactstoolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
        app:title="@string/add_contact"
        app:titleTextColor="@color/white" />
    <ImageButton
        android:id="@+id/backButtonAddContacts"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/addContactstoolbar"
        app:layout_constraintEnd_toEndOf="@+id/addContactstoolbar"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="392dp"
        android:layout_height="389dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addContactDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addContactstoolbar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_person_3_24" />

        <EditText
            android:id="@+id/userName"
            style="@android:style/Widget.Material.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/user_name_hint"
            android:inputType="text"
            android:padding="@dimen/_14sdp"
             />

        <EditText
            android:id="@+id/userPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/baseline_smartphone_24"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/user_phone_hint"
            android:inputType="phone"
            android:padding="@dimen/_14sdp" />

        <EditText
            android:id="@+id/alternatePhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/baseline_phone_iphone_24"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/user_alternate_phone_hint"
            android:inputType="phone"
            android:padding="@dimen/_14sdp" />

        <EditText
            android:id="@+id/userEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/user_email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_14sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </ScrollView>


    </LinearLayout>

    <Button
        android:id="@+id/addContactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:drawableStart="@drawable/baseline_person_add_24"
        android:onClick="addContactDetails"
        android:text="@string/add_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>