<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="88dp">

            <ImageView
                android:id="@+id/contactPic"
                android:layout_width="59dp"
                android:layout_height="0dp"
                android:contentDescription="@string/edit_contact"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/contactNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_person_3_24" />

            <TextView
                android:id="@+id/contactNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/user_contact"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintStart_toEndOf="@+id/contactPic"
                app:layout_constraintTop_toBottomOf="@+id/contactName" />

            <TextView
                android:id="@+id/contactName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/contactNumber"
                app:layout_constraintEnd_toStartOf="@+id/editButton"
                app:layout_constraintStart_toEndOf="@+id/contactPic"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="67dp"
                android:layout_height="0dp"
                android:layout_marginEnd="1dp"
                android:contentDescription="@string/edit_contact"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contactNumber"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_edit_24" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="67dp"
                android:layout_height="43dp"
                android:layout_marginEnd="1dp"
                android:contentDescription="@string/delete_contact"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contactNumber"
                app:layout_constraintTop_toBottomOf="@+id/editButton"
                app:srcCompat="@drawable/baseline_delete_24" />

            <TextView
                android:id="@+id/contactId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="5dp"
                android:text="data id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintStart_toEndOf="@+id/contactNumber"
                app:layout_constraintTop_toBottomOf="@+id/contactNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>